[package]
name = "vertx"
version = "0.1.0"
authors = ["Pierre Zemb <contact@pierrezemb.fr>"]
repository = "https://github.com/PierreZ/vertx-rs.git"
homepage = "https://github.com/PierreZ/vertx-rs.git"
license = "MIT"
readme = "README.md"
description = "A Vert.x Event-bus library for Rust built with Tokio"

[dependencies]
bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
rustc-serialize = "0.3"
byteorder = "1.0.0"
clippy = {version = "*", optional = true}

[features]
default = []
dev = ["clippy"]
